
2013-12-16  Andreas Grapentin  <andreas@grapentin.org>

	* include/string.h: added prototypes for memcpy and memcmp

	* libc/stdio/vprintf.c: fixed zero printing glitches, added %x and %X
	format specifiers
	* libc/string/memcmp.c: added naive memcmp implementation
	* libc/string/memcpy.c: added naive memcpy implementation
	
	* libp/gpio.c: added handler module for general purpose input/output
	* libp/gpio.h: likewise
	* libp/gpio_pins.h: likewise
	* libp/led.c: added simple interface to ev3 LEDs
	* libp/led.h: likewise

	* src/ev3ninja.c: using leds for more fancy hello world example
	* src/startup.c: adding init call for leds

2013-12-13  Andreas Grapentin  <andreas@grapentin.org>

	* include/stddef.h: using __builtin_offsetof for offsetof, ((void*)0)
	for NULL
	* include/string.h: added prototype for memset

	* libc/stdio/vprintf.c: added implementation for %s format, %i format
	returning chars_written on error, instead of EOF
	* libc/string/memset.c: added simple memset implementation


2013-12-12  Andreas Grapentin  <andreas@grapentin.org>

	* libc/errno/errno.c: added simple errno 
	* libc/stdio/putchar.c: added UART based putchar implementation
	* libc/stdio/puts.c: added puts based on putchar
	* libc/stdio/printf.c: added printf implementation, using vprintf
	* libc/stdio/vprintf.c: added simple vprintf function (only %c yet)

	* include/stdio.h: added EOF, added prototypes for puts and putchar,
	printf, vprintf
	* include/stddef.h: added offsetof macro
	* include/errno.h: added most basic errno
	* include/sys/types.h: added size_t